Remove an invalid DCHECK in MailboxManagerSync.

BUG=789742

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I47431033c267c2fc7824a9ff65326bd17d5709e8
Reviewed-on: https://chromium-review.googlesource.com/798324
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Victor Miura <vmiura@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520405}
Former-commit-id: 8982d52ad87c9ed9bb4edb1faaf0a7a46b70d5f6